ddd-derive-tests/tests/entity/unnamed_struct_entity.stderr
error: Entity cannot be derived from Struct with unnamed fields

  = note: Entity may only be derived from a Struct with named fields
  = help: Try changing the item to a Struct with named fields

 --> $DIR/unnamed_struct_entity.rs:4:1
  |
4 | struct Person(i32, String);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
