ddd-derive-tests/tests/entity/unnamed_struct_entity.rs
use ddd_derive::Entity;

#[derive(Entity)]
struct Person(i32, String);

fn main() {}